# limepkg-limebi-faker

./: pyproject.toml  readme.md  setup.cfg
.github/workflows/: ci.yml  update-workflows.yml
frontend/: .eslintrc.js  lwc.config.json  package-lock.json  package.json  stencil.config.dist.ts  stencil.config.ts
frontend/src/components/lwc-limepkg-limebi-faker-limebi-faker-graphics/: lwc-limepkg-limebi-faker-limebi-faker-graphics.scss  lwc-limepkg-limebi-faker-limebi-faker-graphics.tsx
frontend/src/components/lwc-limepkg-limebi-faker-limebi-faker-image-frame/: lwc-limepkg-limebi-faker-limebi-faker-image-frame.scss  lwc-limepkg-limebi-faker-limebi-faker-image-frame.tsx
frontend/src/components/lwc-limepkg-limebi-faker-loader/: lwc-limepkg-limebi-faker-loader.tsx
limepkg_limebi_faker/: __init__.py
limepkg_limebi_faker/config/: __init__.py  schema.py
tests/web_components/: web_components_test.py
